# YourMultiAgent

./: .gitignore  Agents.md  CLAUDE.md  README.md  pyproject.toml  run.sh  run_test.sh
.agents/skills/commit-push/: SKILL.md
.agents/skills/dev-standards/: SKILL.md
.claude/skills/: commit-push.skill  dev-standards.skill
.claude/skills/commit-push/: SKILL.md
.claude/skills/dev-standards/: SKILL.md
docs/: agent-model.md  operations.md  server-architecture.md  session-history.md  web-architecture.md
server/: cli.py  config.py  container.py  main.py  requirements.txt
server/adapter/: admin_controller.py  agent_controller.py  agent_ws.py  auth_controller.py  settings_controller.py  worker_controller.py  worker_ws.py  workspace_controller.py
server/app/agent/: agent_app_service.py  orchestrator.py  task_context_builder.py  task_planner.py  task_scheduler.py  workspace_app_service.py  workspace_executor.py
server/app/settings/: __init__.py  app_log_service.py  codex_runtime_service.py  update_now_service.py
server/app/worker/: worker_app_service.py
server/domain/agent/: agent_entity.py  agent_gateway.py  agent_harness.py  agent_runtime.py  llm_gateway.py  run_entity.py  session_history.py  workspace_gateway.py
server/domain/worker/: capability_entity.py  worker_entity.py  (+1 more)
server/support/: app_logging.py  page_auth.py
server/web/: index.html
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx
worker_client/: README.md  package.json
worker_client/src/: browserWorkerClient.js  cli.js  mockSmoke.js
(+119 files in other folders)
